# dev-tools-suite-desktop

./: ideias.md  package.json  tailwind.config.js  vite.config.js
.github/workflows/: release.yml
.husky/: commit-msg  pre-commit
.husky/scripts/: commit_msg_validator.sh  format_and_lint.sh  package_json_version_checker.sh  sync_versions.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/components/: CommandPalette.svelte
src/lib/components/layout/: Header.svelte  Sidebar.svelte
src/lib/components/ui/: Select.svelte
src/lib/stores/: bookmarks.svelte.ts  favorites.svelte.ts  icloud.svelte.ts  sidebar.svelte.ts  stopwatch.svelte.ts  sync.svelte.ts  theme.svelte.ts  tools.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/(popover)/: +layout@.svelte
src/routes/tools/ascii-art/: +page.svelte
src/routes/tools/base64/: +page.svelte
src/routes/tools/color-converter/: +page.svelte
src/routes/tools/color-picker/: +page.svelte
src/routes/tools/cron/: +page.svelte
src/routes/tools/css-formatter/: +page.svelte
src/routes/tools/dedupe/: +page.svelte
src/routes/tools/diff/: +page.svelte
src/routes/tools/faker/: +page.svelte
src/routes/tools/hash/: +page.svelte
src/routes/tools/html-formatter/: +page.svelte
src/routes/tools/http/: +page.svelte
src/routes/tools/json/: +page.svelte
src/routes/tools/json-converter/: +page.svelte
(+33 files in other folders)
