[package]
name = "devtoolssuite"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "devtoolssuite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-notification = "2.3.3"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
base64 = "0.22"
urlencoding = "2"
xcap = "0.7"
image = "0.25"
aes-gcm = "0.10"
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
tauri-plugin-nspopover = { git = "https://github.com/freethinkel/tauri-nspopover-plugin.git", version = "4.0.0" }

